--- a/assets/views/productos.html
+++ b/assets/views/productos.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut" href="../assets/image/icon/favicon-16x16.png" />
+    <link rel="stylesheet" href="../../style/bootstrap.min.css">
     <link rel="stylesheet" href="../../style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/style.css">
-    <link rel="stylesheet" href="../../style/bootstrap.min.css">
     <title>productos</title>
 </head>
 
 <body>
-    <header>
+  <header class="container-fluid">
+    <div class="wide-xs-12 wide-sm-12 wide-lg-12 p-3">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="../image/icon/favicon.ico" alt="HardwareShop" width="100"></a>
@@ -37,10 +37,12 @@
                 </ul>
               </div>
             </div>
+          </div>
           </nav>
     </header>
-    <main>
-        <table class="table">
+    <main class="container-fluid ">
+      <div class="row">
+          <table class="table col-xs-12 col-sm-12 col-lg-12 p-3 ">
             <thead class="thead-dark">
               <tr>
                 <th scope="col">Codigo</th>
@@ -88,6 +90,7 @@
               </tr>
             </tbody>
           </table>
+      </div>
     </main>
     <footer>
 
