--- a/assets/views/contacto.html
+++ b/assets/views/contacto.html
@@ -5,17 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut" href="../assets/image/icon/favicon-16x16.png">
+  <link rel="stylesheet" href="../../style/bootstrap.min.css">
   <link rel="stylesheet" href="../../style/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../../style/bootstrap.min.css">
   <title>Formulario</title>
 </head>
 
 <body>
-  <header>
+  <header class="container-fluid">
+    <div class="wide-xs-12 wide-sm-12 wide-lg-12 p-3">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="../image/icon/favicon.ico" alt="HardwareShop" width="100"></a>
@@ -36,12 +37,13 @@
           </ul>
         </div>
       </div>
+    </div>
     </nav>
   </header>
   <main>
     <fieldset class="formulario">
       <legend>Formulario</legend>
-      <form>
+      <form class="col-xs-12 col-sm-12 col-lg-6 p-3">
         <div>
           <label for="Nombre">Completa tu nombre</label>
           <input type="text" name="nombre" placeholder="ej. Martin">
