--- a/assets/views/contacto.html
+++ b/assets/views/contacto.html
@@ -19,7 +19,7 @@
     <div class="wide-xs-12 wide-sm-12 wide-lg-12 p-3">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="../image/icon/favicon.ico" alt="HardwareShop" width="100"></a>
+        <a class="navbar-brand" href="../../index.html"><img src="../image/icon/favicon.ico" alt="HardwareShop" width="100"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,9 +41,9 @@
     </nav>
   </header>
   <main>
-    <fieldset class="formulario">
-      <legend>Formulario</legend>
-      <form class="col-xs-12 col-sm-12 col-lg-6 p-3">
+    <form class="hijo" role="">
+      <fieldset class="formulario">
+        <legend>Formulario</legend>
         <div>
           <label for="Nombre">Completa tu nombre</label>
           <input type="text" name="nombre" placeholder="ej. Martin">
@@ -65,16 +65,16 @@
           <div>
             <input class="input-button" type="reset" value="Borrar" />
           </div>
+        </fieldset>
       </form>
-    </fieldset>
   </main>
   <footer>
 
     <hr>
 
-    <h4> <a href="./contacto.html">Contacto</a></h4>
+    <a href="./contacto.html">Contacto</a>
 
-    <h4>Copyright &copy; todos los derechos reservados HardwareShop</h4>
+    <p>Copyright &copy; todos los derechos reservados HardwareShop</p>
   </footer>
 </body>
 
