--- a/assets/views/productos.html
+++ b/assets/views/productos.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-    <title>productos</title>
+    <title>Productos</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <div class="wide-xs-12 wide-sm-12 wide-lg-12 p-3">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="../image/icon/favicon.ico" alt="HardwareShop" width="100"></a>
+              <a class="navbar-brand" href="../../index.html"><img src="../image/icon/favicon.ico" alt="HardwareShop" width="100"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -41,7 +41,8 @@
           </nav>
     </header>
     <main class="container-fluid ">
-      <div class="row">
+      <h2>Listado de Productos:</h2>
+      <div class="row productos">
           <table class="table col-xs-12 col-sm-12 col-lg-12 p-3 ">
             <thead class="thead-dark">
               <tr>
@@ -96,9 +97,9 @@
 
         <hr>
 
-        <h4> <a href="./contacto.html">Contacto</a></h4>
+        <a href="./contacto.html">Contacto</a>
 
-        <h4>Copyright &copy; todos los derechos reservados HardwareShop</h4>
+        <P>Copyright &copy; todos los derechos reservados HardwareShop</P>
     </footer>
 </body>
 
