--- a/assets/views/contacto.html
+++ b/assets/views/contacto.html
@@ -45,15 +45,15 @@
       <fieldset class="formulario">
         <legend>Formulario</legend>
         <div>
-          <label for="Nombre">Completa tu nombre</label>
+          <label for="nombre">Completa tu nombre</label>
           <input type="text" name="nombre" placeholder="ej. Martin">
         </div> <br>
         <div>
-          <label for="Apellido">Completa tu apellido</label>
+          <label for="apellido">Completa tu apellido</label>
           <input type="text" name="apellido" placeholder="ej. Sanchez">
         </div> <br>
         <div>
-          <label for="Email">Completa tu Email</label>
+          <label for="email">Completa tu Email</label>
           <input type="email" name="Email" placeholder="estoesunejempli@ejemplo.com" required>
         </div> <br>
         <div>
