--- a/assets/views/productos.html
+++ b/assets/views/productos.html
@@ -17,7 +17,7 @@
 <body>
   <header class="container-fluid">
     <div class="row">
-        <div class="col-xs-3 col-sm-9 col-lg-12 p-3">
+        <div class="col-xs-12 col-sm-12 col-lg-12">
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
               <div class="container-fluid">
                 <a class="navbar-brand" href="../../index.html"><img src="../image/icon/favicon.ico" alt="HardwareShop" width="100"></a>
