--- a/assets/views/productos.html
+++ b/assets/views/productos.html
@@ -76,10 +76,10 @@
       </div>
     </div>
   </header>
-    <main class="container-fluid ">
-      <h2>Listado de Productos:</h2>
+    <main class="container-fluid pFather ">
       <div class="row productos">
-          <table class="table col-xs-12 col-sm-12 col-lg-12 p-3 ">
+        <h2>Listado de Productos:</h2>
+          <table class="tHijo col-xs-12 col-sm-12 col-lg-12 p-3 ">
             <thead class="thead-dark">
               <tr>
                 <th scope="col">Codigo</th>
