--- a/assets/views/contacto.html
+++ b/assets/views/contacto.html
@@ -76,11 +76,11 @@
       </div>
     </div>
   </header>
-  <main>
+  <main class="fFather">
     <div class="container-fluid">
       <div class="row">
-        <form class="col-xs-12 col-sm-12 col-lg-12 ">
-          <fieldset class="hijo formulario">
+        <form class="col-xs-3 col-sm-9 col-lg-12 hijo formulario">
+          <fieldset>
             <legend>Formulario</legend>
             <div>
               <label for="nombre">Completa tu nombre</label>
@@ -96,7 +96,7 @@
             </div> <br>
             <div>
               <label for="comentario">Motivo de contacto</label><br>
-              <textarea name="comentario" id="" cols="50" rows="5"></textarea>
+              <textarea name="comentario"></textarea>
               <div>
                 <input class="input-button" type="submit" value="Enviar" />
               </div> <br>
