--- a/scss/_preguntas.scss
+++ b/scss/_preguntas.scss
@@ -1,17 +1,14 @@
+// .qfather{
+//   width: 100%;
+//   height: 110vh;
+// }
 .questionM {
+  // border: 3px solid rgba(3, 3, 3, 0.493);
   width: 100%;
-  height: 160vh;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 10px;
-  grid-template-areas:
-    "ef ef "
-    "m v"
-    "d e";
+  height: 100vh;
+  display: flex;
 }
 .questionC {
-  border: 1px solid black;
   padding: 10px;
   width: 3fr;
   margin: auto;
