--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,15 +1,23 @@
-table {
-  background-color: black;
-  width: 50%;
-  height: 30%;
+.pFather {
+  background-image: url(/assets/image/divs.jpg);
+  display: flex;
+  height: 110vh;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.tHijo {
+  background-color: rgb(10, 140, 216);
+  height: 550px;
 }
 .productos {
   padding: 0px;
-  height: 100%;
+  height: 100vh;
   width: 90%;
   border-radius: 3%;
   border: 3px solid rgb(32, 58, 82);
-  background-color: black;
+  background-color: rgb(10, 140, 216);
+  display: block;
 }
 button {
   font-family: roboto;
