--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 @import "main";
 @import "footer";
 @import "form";
-@import "contacto";
+@import "productos";
 @import "politicas";
 @import "preguntas";
 
