--- a/scss/_preguntas.scss
+++ b/scss/_preguntas.scss
@@ -19,18 +19,18 @@
     rgba(2, 2, 2, 0.925)
   );
 }
-.m {
-  grid-area: m;
-}
-.v {
-  grid-area: v;
-}
-.y {
-  grid-area: y;
-}
-.t {
-  grid-area: t;
-}
-.j {
-  grid-area: j;
-}
+// .m {
+//   grid-area: m;
+// }
+// .v {
+//   grid-area: v;
+// }
+// .y {
+//   grid-area: y;
+// }
+// .t {
+//   grid-area: t;
+// }
+// .j {
+//   grid-area: j;
+// }
