--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,37 +1,99 @@
 main {
-  width: 97%;
+  width: 100%;
   margin: top auto;
-  padding: 3%;
-  height: 100vh;
-  border: solid black 1px;
+  padding: 0%;
+  height: 210vh;
+  border: 3px solid rgb(0, 0, 0);
   grid-area: main;
+}
+.main-container {
+  height: 100vh;
+  padding: 13%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   gap: 10px;
   grid-template-areas:
-    "ef ef ef ef"
-    "ab c d e ";
+    "ab j"
+    "c n";
+}
+.main-container-marcas {
+  width: 100%;
+  padding: 20px;
+  height: 100vh;
+  background-color: white;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 10px;
+  grid-template-areas:
+    "p p p p p"
+    "u i r w m"
+    "x t y z f";
+}
+.mainMarcasText {
+  width: 100%;
+  height: 150px;
+  font-size: 50px;
+  font-family: "Roboto", sans-serif;
+  display: grid;
+  grid-area: p;
+  color: rgb(0, 0, 0);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.mainMarcasImg {
+  width: 210px;
+  height: 130px;
+  padding: 3px;
+  border-radius: 3%;
+  border: 1px solid rgb(0, 0, 0);
+  display: flex;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.m {
+  grid-area: m;
+}
+.f {
+  grid-area: f;
+}
+.u {
+  grid-area: u;
+}
+.i {
+  grid-area: i;
+}
+.r {
+  grid-area: r;
+}
+.w {
+  grid-area: w;
+}
+.x {
+  grid-area: x;
+}
+.t {
+  grid-area: t;
+}
+.y {
+  grid-area: y;
+}
+.z {
+  grid-area: z;
 }
 .ab {
-  background-color: coral;
   grid-area: ab;
 }
-.ef {
-  background-color: blueviolet;
-  grid-area: ef;
-}
 .c {
-  background-color: chartreuse;
   grid-area: c;
 }
-.e {
-  background-color: chartreuse;
-  grid-area: e;
+.j {
+  grid-area: j;
 }
-.d {
-  background-color: fuchsia;
-  grid-area: d;
+.n {
+  grid-area: n;
 }
 .sector {
   border: 5px outset rgb(209, 69, 26);
@@ -48,6 +110,18 @@ main {
   display: grid;
   align-self: center;
   transition: all 1.8s ease;
+}
+.sText {
+  padding: 6%;
+  height: 350px;
+  width: 300px;
+  overflow: visible;
+  align-self: center;
+  transition: all 1.8s ease;
+}
+.sHijo {
+  font-size: 1.5em;
+  text-align: start;
 }
 .sector-img {
   border: 1px solid black;
