--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -6,13 +6,27 @@
 body {
   width: 100%;
   height: auto;
+  // background: linear-gradient(
+  //   to top,
+  //   rgb(36, 36, 36),
+  //   rgb(41, 40, 41),
+  //   rgba(46, 46, 46, 0.925),
+  //   rgb(58, 57, 57),
+  //   rgba(68, 68, 68, 0.925)
+  // );
+  // background: radial-gradient(
+  //   circle,
+  //   rgb(255, 255, 255),
+  //   rgb(197, 197, 197),
+  //   rgba(112, 112, 112, 0.925)
+  // );
   background: linear-gradient(
     to top,
-    rgb(36, 36, 36),
-    rgb(41, 40, 41),
-    rgba(46, 46, 46, 0.925),
-    rgb(58, 57, 57),
-    rgba(68, 68, 68, 0.925)
+    white,
+    rgb(231, 231, 231),
+    rgba(236, 225, 225, 0.925),
+    rgb(250, 239, 239),
+    rgba(207, 207, 207, 0.925)
   );
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -27,19 +41,19 @@ p {
   font-size: 15px;
   line-height: 1.5em;
   padding: 3px;
-  color: rgba(148, 141, 50, 0.658);
+  color: grey;
   margin: auto;
 }
 h1 {
   font-family: "Abril Fatface", cursive;
-  color: #221e47;
+  color: black;
   line-height: 1.5em;
   text-align: center;
   word-spacing: 5px;
 }
 h2 {
   font-family: "Abril Fatface", cursive;
-  color: #2e3c8d;
+  color: black;
   line-height: 1.5em;
   padding: 3px;
 }
@@ -64,13 +78,7 @@ h5 {
   margin: 100%;
 }
 .hijo {
-  background: radial-gradient(
-    circle,
-    rgb(27, 54, 82),
-    rgb(52, 52, 92),
-    rgba(2, 2, 2, 0.925)
-  );
-  border: solid rgb(55, 0, 255) 3px;
+  border: solid 3px;
   color: green;
   font-size: 1.5em;
   text-align: start;
