--- a/assets/views/contacto.html
+++ b/assets/views/contacto.html
@@ -17,7 +17,7 @@
 <body>
   <header class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-lg-12">
+      <div class="menu col-xs-12 col-sm-12 col-lg-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="../../index.html"><img src="../image/icon/favicon.ico" alt="HardwareShop" width="100"></a>
@@ -47,32 +47,27 @@
           </nav>
       </div>
     </div>
-    <div class="sCarrucel wide-xs-12 wide-sm-12 wide-lg-12 p-3">
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
+    <div class="sCarrucel wide-xs-12 wide-sm-12 wide-lg-12">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100 carrucelImg" src="../image/publicidad-carrucel.png" alt="First slide">
+            <img src="/assets/image/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100 carrucelImg" src="../image/publicidad-carrucel2.png" alt="Second slide">
+            <img src="/assets/image/publicidad-carrucel2.png" class="d-block w-100" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100 carrucelImg" src="../image/publicidad-carrucel3.png" alt="Third slide">
+            <img src="/assets/image/publicidad-carrucel3.png" class="d-block w-100" alt="Third slide">
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only"></span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only"></span>
-        </a>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
   </header>
@@ -83,23 +78,25 @@
           <fieldset>
             <legend>Formulario</legend>
             <div>
-              <label for="nombre">Completa tu nombre</label>
+              <label for="nombre">Completa tu nombre:</label>
               <input type="text" name="nombre" placeholder="ej. Martin">
             </div> <br>
             <div>
-              <label for="apellido">Completa tu apellido</label>
+              <label for="apellido">Completa tu apellido:</label>
               <input type="text" name="apellido" placeholder="ej. Sanchez">
             </div> <br>
             <div>
-              <label for="email">Completa tu Email</label>
+              <label for="email">Completa tu Email:</label>
               <input type="email" name="Email" placeholder="estoesunejemplo@ejemplo.com" required>
             </div> <br>
             <div>
-              <label for="comentario">Motivo de contacto</label><br>
+              <label for="comentario">Motivo de contacto:</label><br>
               <textarea name="comentario"></textarea>
+            </div>
               <div>
                 <input class="input-button" type="submit" value="Enviar" />
-              </div> <br>
+              </div> 
+              <br>
               <div>
                 <input class="input-button" type="reset" value="Borrar" />
               </div>
