--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -7,4 +7,12 @@ footer {
   height: 100px;
   text-align: center;
   grid-area: footer;
+  border: 2px solid black;
+  background-color: rgb(39, 42, 44);
+  p{
+    color: white;
+  }
+  a{
+    color: white;
+  }
 }
