--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,19 +1,30 @@
 header {
   font-family: "Abril Fatface", cursive;
   height: 30%;
-  padding: 10px;
+  // padding: 10px;
+  margin: 5px;
   grid-area: header1;
   a {
     color: #070008;
     text-decoration: none;
   }
 }
+.menu{
+  width: 100%;
+  height: 200px;
+  img{
+    height: 90px;
+    width: 90px;
+  }
+}
 .slide {
   margin: top 10px;
-  height: 60vh;
+  height: 350px, auto;
   width: 100%;
-  padding: 10px;
+  padding: 0px;
+  border: 1px solid grey;
 }
 .slide img {
-  height: 60vh;
+  height: auto;
+  width: 100%, auto;
 }
