--- a/scss/_politicas.scss
+++ b/scss/_politicas.scss
@@ -1,18 +1,18 @@
 .poCoFather {
-  border: 3px solid rgba(3, 3, 3, 0.493);
+  border: none;
   grid-template-columns: repeat(3, 1fr);
   display: flex;
 
   align-items: center;
   margin: auto;
-  height: 120vh;
+  height: 125vh, auto;
   width: 100%;
   flex-wrap: wrap;
 }
 .politicsContent {
-  border: 5px solid rgb(255, 255, 255);
-  width: 100%;
-  height: 110vh;
+  border: 3px solid grey;
+  width: 80%;
+  height: 110vh, auto;
   margin: auto;
   padding: 30px;
   display: block;
