--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,5 +1,5 @@
 .pFather {
-  background-image: url(/assets/image/divs.jpg);
+  border:none;
   display: flex;
   height: 110vh;
   width: 100%;
@@ -11,30 +11,13 @@
   height: 550px;
 }
 .productos {
-  padding: 0px;
+  padding: 20px;
   height: 100vh;
   width: 90%;
   border-radius: 3%;
   border: 3px solid rgb(32, 58, 82);
   background-color: rgb(10, 140, 216);
   display: block;
-}
-button {
-  font-family: roboto;
-}
-input {
-  font-family: "Abril Fatface", cursive;
-  background-color: black;
-  color: white;
-}
-textarea {
-  font-family: "Abril Fatface", cursive;
-  background-color: black;
-  color: white;
-}
-.input-button {
-  color: white;
-  background-color: grey;
 }
 th {
   font-family: "Bebas Neue", sans-serif;
