aplicando sass II y mejorando SEO

--- a/assets/views/preguntas.html
+++ b/assets/views/preguntas.html
@@ -2,6 +2,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="En HardwareShop vas a poder encontrar los mejores componentes para armar tu PC y productos para Gaming"/>
+    <meta name="keywords" content="hardware, software,tecnologia,componentes,pc,gamer" />
+    <meta name="author" content="Carrazana Franco" />
+    <meta name="copyright" content="Copyright (c) 2022 by HardwareShop" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -9,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Preguntas Frecuentes</title>
+    <title>Preguntas Frecuentes de HardwareShop</title>
 </head>
 <body>
     <header class="container-fluid">
@@ -48,13 +52,13 @@
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/assets/image/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
+                <img src="/assets/image/carrucel/publicidad-carrucel.png" class="d-block w-100" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img src="/assets/image/publicidad-carrucel2.png" class="d-block w-100" alt="Second slide">
+                <img src="/assets/image/carrucel/publicidad-carrucel-2.png" class="d-block w-100" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img src="/assets/image/publicidad-carrucel3.png" class="d-block w-100" alt="Third slide">
+                <img src="/assets/image/carrucel/publicidad-carrucel-3.png" class="d-block w-100" alt="Third slide">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
