--- a/css/style.css
+++ b/css/style.css
@@ -199,12 +199,16 @@ main {
     color: black; }
 
 .sText {
+  border: 1px outset grey;
   padding: 6%;
-  height: auto;
-  width: 300px;
+  height: 370px;
+  width: 340px;
+  border: none;
   overflow: visible;
   align-self: center;
   transition: all 1.8s ease; }
+  .sText p {
+    color: black; }
 
 .sTitulo {
   width: 100%;
@@ -342,16 +346,9 @@ li {
   flex-wrap: wrap; }
 
 .politicsContent {
-  border: 3px solid grey;
-  width: 80%;
-  height: 110vh, auto;
-  margin: auto;
-  padding: 30px;
-  display: block;
   overflow: visible;
   align-self: center;
-  text-align: center;
-  background: radial-gradient(circle, #1b3652, #34345c, rgba(2, 2, 2, 0.925)); }
+  text-align: center; }
   .politicsContent h1 {
     font-family: "Abril Fatface", cursive;
     font-size: 2em;
@@ -371,22 +368,21 @@ li {
     font-size: 15px;
     line-height: 1.5em;
     padding: 3px;
-    color: rgba(255, 251, 4, 0.658);
+    color: rgba(0, 0, 0, 0.658);
     margin: auto; }
 
 .qfather {
   width: 100%;
-  height: 111vh;
+  height: 113vh;
   border: none; }
 
-.questionM {
+.questionM, .politicsContent {
   border: 3px solid grey;
   width: 70%;
-  height: 110vh;
-  display: flex;
-  margin: auto;
-  background: radial-gradient(circle, #1b3652, #34345c, rgba(2, 2, 2, 0.925)); }
-  .questionM h1 {
+  height: 110vh,auto;
+  display: block;
+  margin: auto; }
+  .questionM h1, .politicsContent h1 {
     color: black;
     font-size: 3em; }
 
