--- a/assets/views/preguntas.html
+++ b/assets/views/preguntas.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <header class="container-fluid">
+      <!-- Menu -->
         <div class="row">
           <div class="menu col-xs-12 col-sm-12 col-lg-12">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -48,6 +49,7 @@
               </nav>
           </div>
         </div>
+        <!-- Carrucel -->
         <div class="sCarrucel wide-xs-12 wide-sm-12 wide-lg-12">
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -73,6 +75,7 @@
         </div>
       </header>
       <main  class="qfather">
+        <!-- Mas información -->
         <div class="questionM">
           <section>
             <div class="container-fluid">
