--- a/assets/views/contacto.html
+++ b/assets/views/contacto.html
@@ -20,6 +20,7 @@
 
 <body>
   <header class="container-fluid">
+    <!-- Menu -->
     <div class="row">
       <div class="menu col-xs-12 col-sm-12 col-lg-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -51,6 +52,7 @@
           </nav>
       </div>
     </div>
+    <!--  Carrucel -->
     <div class="sCarrucel wide-xs-12 wide-sm-12 wide-lg-12">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -76,6 +78,7 @@
     </div>
   </header>
   <main class="fFather">
+    <!-- Formulario -->
     <div class="container-fluid">
       <div class="row">
         <form class="col-xs-3 col-sm-9 col-lg-12 hijo formulario">
