--- a/assets/views/productos.html
+++ b/assets/views/productos.html
@@ -20,6 +20,7 @@
 
 <body>
   <header class="container-fluid">
+    <!-- Menu -->
     <div class="row">
       <div class="menu col-xs-12 col-sm-12 col-lg-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -51,6 +52,7 @@
           </nav>
       </div>
     </div>
+    <!-- Carrucel -->
     <div class="sCarrucel wide-xs-12 wide-sm-12 wide-lg-12">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -76,6 +78,7 @@
     </div>
   </header>
     <main class="container-fluid pFather ">
+      <!-- Listado de productos -->
       <div class="row productos">
         <h2>Listado de Productos:</h2>
           <table class="tHijo col-xs-12 col-sm-12 col-lg-12 p-3 ">
