--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ h5 {
 header {
   font-family: "Abril Fatface", cursive;
   height: 30%;
+  padding: 10px;
   margin: 5px;
   grid-area: header1; }
   header a {
@@ -70,21 +71,28 @@ header {
 
 .menu {
   width: 100%;
-  height: 200px; }
+  height: 200px;
+  padding: auto;
+  margin: 0 auto; }
   .menu img {
     height: 90px;
     width: 90px; }
 
 .slide {
   margin: top 10px;
-  height: 350px, auto;
+  height: 350px;
   width: 100%;
-  padding: 0px;
+  padding: auto;
   border: 1px solid grey; }
 
 .slide img {
-  height: auto;
+  height: 400px;
   width: 100%, auto; }
+
+.sCarrucel {
+  display: block;
+  height: 400px;
+  padding: 0; }
 
 main {
   width: 100%;
@@ -417,10 +425,9 @@ li {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 10px;
-    grid-template-areas: "p p p " "u i r " "w m x" "x t y" "z f"; }
+    grid-template-areas: "p p p " "u i r " "w m x" "t y z" "f f f"; }
   .hijo {
-    width: auto;
-    background-color: yellow;
+    width: 300px;
     border: solid #3700ff 3px;
     color: green;
     font-size: 1.5em;
@@ -460,7 +467,6 @@ li {
     grid-template-areas: "p p " "u i " "r w " "m x" "t y" "z f"; }
   .hijo {
     width: auto;
-    background-color: yellow;
     border: solid #04010f 3px;
     color: red;
     font-size: 1.5em;
@@ -500,7 +506,6 @@ li {
     grid-template-areas: "p " "u" "i" "r " "w" "m " "x" "t " "y" "z" "f"; }
   .hijo {
     width: auto;
-    background-color: yellow;
     border: solid #f7f7f7 3px;
     color: white;
     font-size: 1.5em;
