--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,7 @@
 header {
   font-family: "Abril Fatface", cursive;
   height: 30%;
-  // padding: 10px;
+  padding: 10px;
   margin: 5px;
   grid-area: header1;
   a {
@@ -12,19 +12,28 @@ header {
 .menu{
   width: 100%;
   height: 200px;
+  padding: auto;
+  margin: 0 auto ;
+  
   img{
     height: 90px;
     width: 90px;
   }
 }
 .slide {
-  margin: top 10px;
-  height: 350px, auto;
+  margin: top 10px, ;
+  height: 350px;
   width: 100%;
-  padding: 0px;
+  padding: auto;
   border: 1px solid grey;
+  
 }
 .slide img {
-  height: auto;
+  height: 400px;
   width: 100%, auto;
+}
+.sCarrucel {
+  display: block;
+  height: 400px;
+  padding: 0;
 }
